--- a/inicio/fondpublic.html
+++ b/inicio/fondpublic.html
@@ -138,54 +138,169 @@
                   <div class="panel-body">
                     <div class="inbox-widget">
 
-                      <div class="inbox-item">
-                        <p class="inbox-item-author">Beca de Doctorado Nacional, Año académico 2022</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
+                      <div class="row">
+
+                        <div class="col-lg-6">
+                          <div class="panel panel-color panel-primary">
+                            <div class="panel-heading">
+                              <h3 class="panel-title text-center">Beca de Doctorado Nacional, Año académico 2022</h3>
+                            </div>
+                            <div class="panel-body">
+                              <div class="text-center">
+                                <img src="../assets/images/becas.jpg" height="250" width="500">
+                              </div>
+                              <p class="inbox-item-date text-left">fecha de publicación: 23-11-2021</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat.</p>
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="inbox-item-text" style="margin-top:6px">
+                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                    </p>
+                                  </div>
+                                  <div class="col-md-6 text-right">
+                                    <p>
+                                      <a href=""><i class="md ion-social-facebook"></i></a>
+                                      <a href=""><i class="md ion-social-instagram"></i></a>
+                                      <a href=""><i class="md ion-social-twitter"></i></a>
+                                      <a href=""><i class="md ion-social-linkedin"></i></a>
+                                    </p>
+                                  </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-6">
+                          <div class="panel panel-color panel-primary">
+                            <div class="panel-heading">
+                              <h3 class="panel-title text-center">Concurso IDeA I+D 2022</h3>
+                            </div>
+                            <div class="panel-body">
+                              <div class="text-center">
+                                <img src="../assets/images/concurso.jpg" height="250" width="500">
+                              </div>
+                              <p class="inbox-item-date text-left">fecha de publicación: 23-11-2021</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat.</p>
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="inbox-item-text" style="margin-top:6px">
+                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                    </p>
+                                  </div>
+                                  <div class="col-md-6 text-right">
+                                    <p>
+                                      <a href=""><i class="md ion-social-facebook"></i></a>
+                                      <a href=""><i class="md ion-social-instagram"></i></a>
+                                      <a href=""><i class="md ion-social-twitter"></i></a>
+                                      <a href=""><i class="md ion-social-linkedin"></i></a>
+                                    </p>
+                                  </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-6">
+                          <div class="panel panel-color panel-primary">
+                            <div class="panel-heading">
+                              <h3 class="panel-title text-center">Concurso de Instituto Milenio en Ciencias Sociales 2022</h3>
+                            </div>
+                            <div class="panel-body">
+                              <div class="text-center">
+                                <img src="../assets/images/milenio.jpg" height="250" width="500">
+                              </div>
+                              <p class="inbox-item-date text-left">fecha de publicación: 23-11-2021</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat.</p>
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="inbox-item-text" style="margin-top:6px">
+                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                    </p>
+                                  </div>
+                                  <div class="col-md-6 text-right">
+                                    <p>
+                                      <a href=""><i class="md ion-social-facebook"></i></a>
+                                      <a href=""><i class="md ion-social-instagram"></i></a>
+                                      <a href=""><i class="md ion-social-twitter"></i></a>
+                                      <a href=""><i class="md ion-social-linkedin"></i></a>
+                                    </p>
+                                  </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="col-lg-6">
+                          <div class="panel panel-color panel-primary">
+                            <div class="panel-heading">
+                              <h3 class="panel-title text-center">Postulaciones Capital Semilla SERCOTEC 2022</h3>
+                            </div>
+                            <div class="panel-body">
+                              <div class="text-center">
+                                <img src="../assets/images/capital-semilla.jpg" height="250" width="500">
+                              </div>
+                              <p class="inbox-item-date text-left">fecha de publicación: 23-11-2021</p>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat.</p>
+                                <div class="row">
+                                  <div class="col-md-6">
+                                    <p class="inbox-item-text" style="margin-top:6px">
+                                      <a href="#"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                                    </p>
+                                  </div>
+                                  <div class="col-md-6 text-right">
+                                    <p>
+                                      <a href=""><i class="md ion-social-facebook"></i></a>
+                                      <a href=""><i class="md ion-social-instagram"></i></a>
+                                      <a href=""><i class="md ion-social-twitter"></i></a>
+                                      <a href=""><i class="md ion-social-linkedin"></i></a>
+                                    </p>
+                                  </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+
+
+
                       </div>
 
-                      <div class="inbox-item">
-                        <p class="inbox-item-author">Concurso IDeA I+D 2022</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div>
 
-                      <div class="inbox-item">
-                        <p class="inbox-item-author">Concurso de Instituto Milenio en Ciencias Sociales 2022</p>
-                        <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
-                            style="margin-left:40%"> Compartir </a></p>
-                        <p class="inbox-item-date">23-11-2021</p>
-                      </div>
 
-                      <div class="inbox-item">
+                      <!-- <div class="inbox-item">
                         <p class="inbox-item-author">Postulaciones Capital Semilla SERCOTEC 2022</p>
                         <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
                             style="margin-left:40%"> Compartir </a></p>
                         <p class="inbox-item-date">23-11-2021</p>
-                      </div>
+                      </div> -->
 
-                      <div class="inbox-item">
+                      <!-- <div class="inbox-item">
                         <p class="inbox-item-author">Postulaciones Capital Abeja SERCOTEC 2022</p>
                         <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
                             style="margin-left:40%"> Compartir </a></p>
                         <p class="inbox-item-date">23-11-2021</p>
-                      </div>
+                      </div> -->
 
-                      <div class="inbox-item">
+                      <!-- <div class="inbox-item">
                         <p class="inbox-item-author">Postulaciones a Creditos de Eduacion Superior</p>
                         <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
                             style="margin-left:40%"> Compartir </a></p>
                         <p class="inbox-item-date">23-11-2021</p>
-                      </div>
+                      </div> -->
 
-                      <div class="inbox-item">
+                      <!-- <div class="inbox-item">
                         <p class="inbox-item-author">Postulaciones al IFE mes de Diciembre</p>
                         <p class="inbox-item-text" style="margin-top:6px"><a href="#"> Abrir enlace </a> <a href="#"
                             style="margin-left:40%"> Compartir </a></p>
                         <p class="inbox-item-date">23-11-2021</p>
-                      </div>
+                      </div> -->
 
                     </div>
                   </div>
