--- a/inicio/links.html
+++ b/inicio/links.html
@@ -100,7 +100,7 @@
               <a href="vinculacion.html"><i class="fa fa-file-text-o fa-2x"></i> <span> Vinculación </span> </a>
             </li>
             <li>
-              <a href="calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
+              <a href="../servicioscomunicacinales/calendar.html"><i class="fa fa-calendar"></i> <span> Servicios Comunicacionales </span> </a>
             </li>
             <li>
               <a href=""><i class="fa fa-gear"></i> <span> Administrador</span> </a>
@@ -134,65 +134,107 @@
 
                 <div class="panel-body">
                   <div class="inbox-widget">
+                    <div class="row">
 
-                    <div class="inbox-item">
-                      <div class="panel-heading">
-                        <h3 class="panel-title inbox-item-author">Agencia Nacional de Investigacion y desarollo</h3>
+                      <div class="col-lg-6">
+                        <div class="panel panel-color panel-primary">
+                          <div class="panel-heading text-center">
+                            Agencia Nacional de Investigacion y desarollo
+                          </div>
+                          <div class="row">
+                            <div class="panel-body text-center">
+                              <div class="col-md-4">
+                                <img src="../assets/images/ANID.png" height="200" width="200">
+                              </div>
+                              <div class="col-md-8">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                  ex ea commodo consequat.
+                                </p>
+                                <p class="inbox-item-text text-left" style="margin-top:6px">
+                                  <a href="https://www.anid.cl" style="margin-left:40%"> ir al Sitio Web <i class="md ion-arrow-right-c"></i></a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
 
-                      <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
+                      <div class="col-lg-6">
+                        <div class="panel panel-color panel-primary">
+                          <div class="panel-heading text-center">
+                            Ministerio de Ciencia, Tecnología, Conocimiento e Inovación
+                          </div>
+                          <div class="row">
+                            <div class="panel-body text-center">
+                              <div class="col-md-4">
+                                <img src="../assets/images/MICITEC.png" height="200" width="200">
+                              </div>
+                              <div class="col-md-8">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                  ex ea commodo consequat.
+                                </p>
+                                <p class="inbox-item-text text-left" style="margin-top:6px">
+                                  <a href="https://www.minciencia.gob.cl" style="margin-left:40%"> ir al Sitio Web <i class="md ion-arrow-right-c"></i></a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
 
-                      <p class="inbox-item-text" style="margin-top:6px">
-                        <a href="https://www.anid.cl" style="margin-left:40%"> ir al Sitio Web</a>
-                      </p>
+                      <div class="col-lg-6">
+                        <div class="panel panel-color panel-primary">
+                          <div class="panel-heading text-center">
+                            Ministerio de Economía, Fomento y Turismo
+                          </div>
+                          <div class="row">
+                            <div class="panel-body text-center">
+                              <div class="col-md-4">
+                                <img src="../assets/images/MICITEC.png" height="200" width="200">
+                              </div>
+                              <div class="col-md-8">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                  ex ea commodo consequat.
+                                </p>
+                                <p class="inbox-item-text text-left" style="margin-top:6px">
+                                  <a href="https://www.economia.gob.cl" style="margin-left:40%"> ir al Sitio Web <i class="md ion-arrow-right-c"></i></a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="col-lg-6">
+                        <div class="panel panel-color panel-primary">
+                          <div class="panel-heading text-center">
+                            CORFO
+                          </div>
+                          <div class="row">
+                            <div class="panel-body text-center">
+                              <div class="col-md-4">
+                                <img src="../assets/images/CORFO.png" height="200" width="200">
+                              </div>
+                              <div class="col-md-8">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                  ex ea commodo consequat.
+                                </p>
+                                <p class="inbox-item-text text-left" style="margin-top:6px">
+                                  <a href="https://www.corfo.cl/sites/cpp/homecorfo" style="margin-left:40%"> ir al Sitio Web <i class="md ion-arrow-right-c"></i></a>
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+
+
                     </div>
-
-                    <div class="inbox-item">
-                      <div class="panel-heading">
-                        <h3 class="panel-title inbox-item-author">Ministerio de Ciencia, Tecnología, Conocimiento e Inovación</h3>
-                      </div>
-                      <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                      </div>
-                      <p class="inbox-item-text" style="margin-top:6px">
-                        <a href="https://www.minciencia.gob.cl" style="margin-left:40%"> ir al Sitio Web</a>
-                      </p>
-                    </div>
-
-                    <div class="inbox-item">
-                      <div class="panel-heading">
-                        <h3 class="panel-title inbox-item-author">Ministerio de Economía, Fomento y Turismo</h3>
-                      </div>
-                      <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                      </div>
-                      <p class="inbox-item-text" style="margin-top:6px">
-                        <a href="https://www.economia.gob.cl" style="margin-left:40%"> ir al Sitio Web</a>
-                      </p>
-                    </div>
-
-                    <div class="inbox-item">
-                      <div class="panel-heading">
-                        <h3 class="panel-title inbox-item-author">CORFO</h3>
-                      </div>
-                      <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                      </div>
-                      <p class="inbox-item-text" style="margin-top:6px">
-                        <a href="https://www.corfo.cl/sites/cpp/homecorfo" style="margin-left:40%"> ir al Sitio Web</a>
-                      </p>
-                    </div>
-
                   </div>
                 </div>
 
