--- a/inicio/noticias.html
+++ b/inicio/noticias.html
@@ -136,129 +136,128 @@
 
                   <div class="col-lg-4">
                     <div class="panel panel-color panel-primary">
+
                       <div class="panel-heading">
-                        <h3 class="panel-title">Becas de Estudio para el 2022</h3>
+                        <h3 class="panel-title text-center">Becas de Estudio para el 2022</h3>
                       </div>
+
                       <div class="panel-body">
                         <div class="inbox-item">
-                          <p class="inbox-item-author">Beca de Doctorado Nacional, Año académico 2022</p>
+                          <div class="text-center">
+                            <img src="../assets/images/noticia2.jpg" height="250" width="320">
+                          </div>
+
+                          <p class="inbox-item-date text-center">fecha de publicación: 23-11-2021</p>
+
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                           ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
+
+                          <div class="row">
+                            <div class="col-md-6">
+                              <p class="inbox-item-text" style="margin-top:6px">
+                                <a href="news.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                              </p>
+                            </div>
+                            <div class="col-md-6 text-right">
+                              <p>
+                                <a href=""><i class="md ion-social-facebook"></i></a>
+                                <a href=""><i class="md ion-social-instagram"></i></a>
+                                <a href=""><i class="md ion-social-twitter"></i></a>
+                                <a href=""><i class="md ion-social-linkedin"></i></a>
+                              </p>
+                            </div>
+                          </div>
+
                         </div>
                       </div>
+
                     </div>
                   </div>
 
                   <div class="col-lg-4">
                     <div class="panel panel-color panel-primary">
+
                       <div class="panel-heading">
-                        <h3 class="panel-title">Nuevas medidas de Postulación de Empleos</h3>
+                        <h3 class="panel-title text-center">Nuevas medidas de Postulación de Empleos</h3>
                       </div>
+
                       <div class="panel-body">
                         <div class="inbox-item">
-                          <p class="inbox-item-author">Nuevas medidas de Postulación de Empleos</p>
+                          <div class="text-center">
+                            <img src="../assets/images/noticia1.jpg" height="250" width="320" >
+                          </div>
+
+                          <p class="inbox-item-date text-center">fecha de publicación: 23-11-2021</p>
+
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                           ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
+
+                          <div class="row">
+                            <div class="col-md-6">
+                              <p class="inbox-item-text" style="margin-top:6px">
+                                <a href="news.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                              </p>
+                            </div>
+                            <div class="col-md-6 text-right">
+                              <p>
+                                <a href=""><i class="md ion-social-facebook"></i></a>
+                                <a href=""><i class="md ion-social-instagram"></i></a>
+                                <a href=""><i class="md ion-social-twitter"></i></a>
+                                <a href=""><i class="md ion-social-linkedin"></i></a>
+                              </p>
+                            </div>
+                          </div>
+
                         </div>
                       </div>
+
                     </div>
                   </div>
 
                   <div class="col-lg-4">
                     <div class="panel panel-color panel-primary">
+
                       <div class="panel-heading">
-                        <h3 class="panel-title">Eventos para Enero 2022</h3>
+                        <h3 class="panel-title text-center">Eventos para Enero 2022</h3>
                       </div>
+
                       <div class="panel-body">
                         <div class="inbox-item">
-                          <p class="inbox-item-author">Eventos para Enero 2022</p>
+                          <div class="text-center">
+                            <img src="../assets/images/noticia.jpg" height="250" width="320">
+                          </div>
+
+                          <p class="inbox-item-date text-center">fecha de publicación: 23-11-2021</p>
+
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                           ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
+
+                          <div class="row">
+                            <div class="col-md-6">
+                              <p class="inbox-item-text" style="margin-top:6px">
+                                <a href="news.html"> Seguir Leyendo <i class="md ion-arrow-right-c"></i></a>
+                              </p>
+                            </div>
+                            <div class="col-md-6 text-right">
+                              <p>
+                                <a href=""><i class="md ion-social-facebook"></i></a>
+                                <a href=""><i class="md ion-social-instagram"></i></a>
+                                <a href=""><i class="md ion-social-twitter"></i></a>
+                                <a href=""><i class="md ion-social-linkedin"></i></a>
+                              </p>
+                            </div>
+                          </div>
+
                         </div>
                       </div>
+
                     </div>
                   </div>
 
-                  <div class="col-lg-4">
-                    <div class="panel panel-color panel-primary">
-                      <div class="panel-heading">
-                        <h3 class="panel-title">Ultimos Cupos Cursos Enero 2022</h3>
-                      </div>
-                      <div class="panel-body">
-                        <div class="inbox-item">
-                          <p class="inbox-item-author">Ultimos Cupos Cursos Enero 2022</p>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
-                  <div class="col-lg-4">
-                    <div class="panel panel-color panel-primary">
-                      <div class="panel-heading">
-                        <h3 class="panel-title">Nuevos Centros para Marzo 2022</h3>
-                      </div>
-                      <div class="panel-body">
-                        <div class="inbox-item">
-                          <p class="inbox-item-author">Nuevos Centros para Marzo 2022</p>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-4">
-                    <div class="panel panel-color panel-primary">
-                      <div class="panel-heading">
-                        <h3 class="panel-title">Nuevos Horarios y lugares de Cursos SERCOTEC</h3>
-                      </div>
-                      <div class="panel-body">
-                        <div class="inbox-item">
-                          <p class="inbox-item-author">Nuevos Horarios y lugares de Cursos SERCOTEC</p>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                          ex ea commodo consequat.</p>
-                          <p class="inbox-item-text" style="margin-top:6px">
-                            <a href="#"> Abrir enlace </a>
-                            <a href="#" style="margin-left:40%"> Compartir </a>
-                          </p>
-                          <p class="inbox-item-date">23-11-2021</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
               </div>
 
